--- a/src/sass/styles.css
+++ b/src/sass/styles.css
@@ -1,3 +1,29 @@
+* {
+    box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+        Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+    background-color: #fafafa;
+    color: #212121;
+    line-height: 1.5;
+    margin: 0;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+h1 {
+    margin: 0;
+}
+
 .style-head {
         background-color: #af10bd;
             justify-content: center;
@@ -38,4 +64,61 @@ filter: drop-shadow(0 4px 4px #00000026);
 .button-style:focus {
     color: gold;
     background-color: green;
+}
+
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 16px 30px;
+    justify-content: center;
+}
+
+.load-more-button {
+    padding-inline: 50px;
+    font-size: 18px;
+    background-color: rgb(0, 236, 236);
+}
+.images-card {
+    outline: auto;
+    padding: 5px;
+    border-radius: 5px;
+    background-color: rgb(248, 248, 242);
+}
+.card-image {
+    width: 300px;
+    height: 160px;
+    object-fit: cover;
+}
+.info {
+    display: flex;
+    justify-content: space-around;
+}
+
+.info-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-block: 8px;
+}
+
+/* scroll up button */
+
+.js-scrollup-button {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 50px;
+    border: none;
+    outline: none;
+    background-color: #0000;
+    color: #ff6347dd;
+    cursor: pointer;
+}
+
+.js-scrollup-button:hover {
+    color: rgb(0, 236, 236);
+    scale: 1.1;
 }
