--- a/src/sass/styles.css
+++ b/src/sass/styles.css
@@ -100,7 +100,8 @@ color: gold;
     border-radius: 5px;
     background-color: rgb(248, 248, 242);
 }
-.photo-card:hover {
+.photo-card:hover,
+ .photo-card:focus{
     color: gold;
     background-color: #af10bd;
 }
